--- a/UrlLauncherServer/UrlLauncherServer.csproj
+++ b/UrlLauncherServer/UrlLauncherServer.csproj
@@ -77,6 +77,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="StartupManager.cs" />
     <Compile Include="TcpComServer.cs" />
     <Compile Include="UrlLauncherServer.cs" />
   </ItemGroup>
